--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,21 +7,25 @@
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <style>
+            .rfc2119 {
+                text-transform: lowercase;
+                font-variant: small-caps;
+                font-style: normal;
+                color: #900;
+            }
+    </style>
     {% include head-custom.html %}
   </head>
   <body>
+    <!-- based on https://github.com/pages-themes/primer/blob/master/_layouts/default.html -->
     <div class="container-lg px-3 my-5 markdown-body">
-      {% if site.title %}
-      <a href="{{ "/" | absolute_url }}">{{ site.title }}</a>
+      {% if !page.no_site_title and site.title and site.title != page.title %}
+      <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
       {% endif %}
 
       {{ content }}
 
-      {% if site.github.private != true and site.github.license %}
-      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-        This site is open source. {% github_edit_link "Improve this page" %}.
-      </div>
-      {% endif %}
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
