--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
   <body>
     <!-- based on https://github.com/pages-themes/primer/blob/master/_layouts/default.html -->
     <div class="container-lg px-3 my-5 markdown-body">
-      {% if !page.no_site_title and site.title and site.title != page.title %}
+      {% if page.no_site_title != true and site.title and site.title != page.title %}
       <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
       {% endif %}
 
